Futher HTML and CSS updates

--- a/style/style.css
+++ b/style/style.css
@@ -28,12 +28,16 @@ body {
     font-size: 2rem;
 }
 
-header {
-    background-image: url(../assets/home-1.jpeg);
-    height: 50vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+.wrapper-inner {
+    max-width: 1366px;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.wrapper-outer {
+    max-width: 1600px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 h1 {
@@ -52,6 +56,14 @@ h2 {
     letter-spacing: 0.12rem;
 }
 
+h3 {
+    font-family: 'Poppins',Sans Serif;
+    font-size: 1.6 rem;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 0.8rem;
+}
+
 p {
     font-family: 'Poppins',Sans Serif;
     font-size: 1.4rem;
@@ -59,32 +71,156 @@ p {
     letter-spacing: 0.03rem;
 }
 
+ul {
+    list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
 
+a {
+    text-decoration: none;
+    color: black;
+}
 
+/*********************/
+/* Nav styles */
+/*********************/
 
+.nav-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
+.nav-logo {
+    text-align: center;
+    flex: 1 0 50%;
+} 
+.nav-bar-one {
+	flex: 1 0 25%;
+}
 
+.nav-bar-two {
+    flex: 1 0 25%;
+}
 
+.cart {
+    position: relative;
+}
 
+/* .two {
+    position: absolute;
+    top: 0;
+    right: 0;
+} */
 
+.cart .cirlce-test {
+    /* position: absolute; */
+    /* top: 0; */
+    /* right: 0; */
+    width: 50px;
+    height: 50px;
+    background: red;
+    border-radius: 50%;
+
+}
+
+.nav-bar ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
 
 
 /*********************/
-/* overall styles */
+/* Header styles */
 /*********************/
 
-/*********************/
-/* overall styles */
-/*********************/
+header {
+    background-image: url(../assets/home-1.jpeg);
+    height: 50vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
 
 /*********************/
-/* overall styles */
+/* About us styles */
 /*********************/
 
+.about-us {
+    display: flex;
+    flex-direction: column;
+}
+
+.about-us-content {
+    display: flex;
+}
+
+.about-image,
+.about-info {
+    flex: 1 0 40%;
+}
+
+.about-circle {
+    position: absolute;
+    /* left: -50px; */
+    bottom: 0;
+    left: 100px;
+}
+
+.about-image {
+    position: relative;
+    text-align: right;
+    padding-right: 75px;
+}
+
+.about-info h2 {
+    /* margin-top: ; */
+}
+
+.line {
+    width: 75px;
+    border-top: 5px solid black;
+}
+
 /*********************/
-/* overall styles */
+/* Experience styles */
 /*********************/
+
+.amenities {
+    display: flex;
+}
+
+.experience {
+    display: flex;
+}
+
+.experience ul {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 600px;
+}
+
+.experience li {
+    display: flex;
+    /* flex-direction: column; */
+}
+
+.test {
+
+}
+
+.test1 {
+    flex-direction: column;
+}
+
+.experience ul,
+.experience-image {
+    /* flex: 1 0 50%; */
+
+}
 
 /*********************/
 /* overall styles */
