--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -3,3 +3,4 @@ $secondary-color: white;
 $button-color: blue;
 $button-border: 2px solid $button-color;
 $background-color: #EDEDED;
+$text-color-main: black;
