--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -5,5 +5,7 @@
 @import 'about';
 @import 'experience';
 @import 'reviewGallery';
-// @import 'footer';
-// @import 'media';
+@import 'contact';
+@import 'footer';
+@import 'blog';
+@import 'media';
