--- a/styles/sass/_reviewGallery.scss
+++ b/styles/sass/_reviewGallery.scss
@@ -1,14 +1,58 @@
-.testimonialGallery {
+.testimonial-gallery {
     display: flex;
     flex-direction: column;
-    background-color: $background-color;
+    background-image: url(../assets/pattern.png);
 }
+
+.testimonial {
+    display: flex;
+    justify-content: center;
+}
+
+.testimonial-gallery .wrapper-iiner {
+    
+}
+
+.test-inner-wrapper {
+    text-align: center;
+    max-width: 1280px;
+    width: 100%;
+    background-color: white;
+    margin-top: 150px;
+    padding: 50px 0;
+
+    blockquote p {
+        max-width: 800px;
+        text-align: center;
+        margin: auto;
+    }
+}
+
+.stars ul {
+    display: flex;
+    justify-content: center;
+}
+
 
 .gallery {
     display: flex;
     flex-direction: column;
-
+    text-align: center;
+    margin: 100px auto;
+    
     ul {
         display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
+        img {
+            display: block;
+        }
+
+        li {
+            margin: 15px 15px;
+        }
     }
 }
+
+
