--- a/styles/sass/_reviewGallery.scss
+++ b/styles/sass/_reviewGallery.scss
@@ -46,7 +46,23 @@
         }
 
         li {
-            margin: 15px 15px;
+            margin-right: 25px;
+            width: calc((100% - 50px) / 3);
+            
+        }
+
+        li:nth-child(3) {
+                margin-right: 0;
+        }
+
+        li:nth-child(6) {
+        margin-right: 0;
+        }
+
+        li:nth-child(1),
+        li:nth-child(2),
+        li:nth-child(3) {
+                margin-bottom: 25px;
         }
     }
 }
