--- a/styles/styles.css
+++ b/styles/styles.css
@@ -421,10 +421,17 @@ header {
   margin-bottom: 100px;
 }
 
+.about-info p {
+  text-align: left;
+}
+
 .about-us-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .about-us-content img {
@@ -432,18 +439,15 @@ header {
   max-width: 370px;
 }
 
-.about-image,
 .about-info {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 40%;
-          flex: 1 0 40%;
+  width: 50%;
 }
 
 .about-circle {
   position: absolute;
   /* left: -50px; */
-  bottom: -50px;
-  left: 100px;
+  bottom: -40px;
+  left: -100px;
 }
 
 .about-image {
@@ -455,7 +459,7 @@ header {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  margin-right: 100px;
+  margin-right: 50px;
 }
 
 .about-image .circle {
@@ -491,6 +495,9 @@ header {
   display: -ms-flexbox;
   display: flex;
   /* margin-left: 15%; */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .experience ul {
@@ -592,7 +599,22 @@ header {
 }
 
 .gallery ul li {
-  margin: 15px 15px;
+  margin-right: 25px;
+  width: calc((100% - 50px) / 3);
+}
+
+.gallery ul li:nth-child(3) {
+  margin-right: 0;
+}
+
+.gallery ul li:nth-child(6) {
+  margin-right: 0;
+}
+
+.gallery ul li:nth-child(1),
+.gallery ul li:nth-child(2),
+.gallery ul li:nth-child(3) {
+  margin-bottom: 25px;
 }
 
 .contact {
@@ -607,8 +629,12 @@ header {
   display: flex;
 }
 
-.contact .wrapper-outer img {
-  width: 100%;
+.contact img {
+  max-width: 1075px;
+}
+
+.contact .inner-contact {
+  margin-right: 5%;
 }
 
 .contact-info {
@@ -619,14 +645,13 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  text-align: left;
-  margin: 0 auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 75%;
 }
 
 .contact-info h3 {
@@ -637,7 +662,7 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #000000;
+  background-color: #252424;
   color: white;
   height: 25vh;
 }
@@ -676,7 +701,81 @@ footer .footer-border {
 }
 
 .blog-shift {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: relative;
   top: -150px;
   background-color: white;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.blog-shift .blog-title {
+  text-align: center;
+  padding-top: 80px;
+}
+
+.width-limiter {
+  width: 95%;
+}
+
+.blog-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.blog-header .author {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.blog-header .author img {
+  border-radius: 50%;
+  width: 50%;
+}
+
+.blog-header .author-name {
+  margin-left: 20px;
+  text-align: left;
+}
+
+.blog-header .author-name h3 {
+  text-align: left;
+}
+
+.blog-misc ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.blog-misc ul h3 {
+  text-align: left;
+}
+
+.blog-misc ul li {
+  margin: 0 25px;
+}
+
+.blog-media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
