--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -57,3 +57,66 @@
     display: flex;
     justify-content: flex-start;
 }
+
+.blog-related {
+
+    .related-gallery {
+        display: flex;        
+
+        ul {
+            display: flex;
+            width: 100%;
+        }
+        
+        li {
+            margin-right: 25px;
+            width: calc((100% - 50px)/ 3);
+            &:nth-child(3) {
+                margin-right: 0;
+            }
+        }
+    }
+}
+
+.blog-comments img {
+    max-width: 70px;
+    max-height: 70px;
+}
+
+.comment-post-one,
+.comment-post-two {
+    display: flex;
+}
+
+.comment-post-one {
+    margin-bottom: 25px;
+}
+
+.bubble {
+    position: relative;
+    width: 100%;
+    height: 150px;
+    padding: 0px;
+    background: #EDEDED;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 0px;
+}
+
+.bubble:after {
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 8px 23px 8px 0;
+    border-color: transparent #EDEDED;
+    display: block;
+    width: 0;
+    z-index: 1;
+    left: -22px;
+    top: 11px;
+}
+
+.comment {
+    margin-left: 25px;
+    padding-left: 25px;
+}
