Blog - added font awesome and styled it a bit

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -780,6 +780,20 @@ footer .footer-border {
           justify-content: flex-start;
 }
 
+.blog-media ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 20px;
+}
+
+.blog-media li {
+  margin: 0 5px 0 5px;
+}
+
 .blog-related .related-gallery {
   display: -webkit-box;
   display: -ms-flexbox;
