--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -56,6 +56,17 @@
 .blog-media {
     display: flex;
     justify-content: flex-start;
+
+    ul {
+        display: flex;
+        align-items: center;
+        margin-left: 20px;
+    }
+    
+    li {
+        margin: 0 5px 0 5px;
+
+    }
 }
 
 .blog-related {
