Work on footer, blog, and their sass

--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -25,5 +25,46 @@ footer {
         padding-bottom: 50px;
     }
 
+    .copyright {
+        display: flex;
+        justify-content: space-between;
 
+        ul {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+    
+            li {
+                margin-left: 50px;
+            }
+    }
+
+    }
+
+    form {
+        width: 40%;
+
+        .footer-form {
+            width: 100%;
+            border-left: none;
+            border-top: none;
+            border-right: none;
+            border-bottom: 1 px solid black;
+            background-color: #252424;
+            color: white;
+        }
+        
+        .container-mail {
+            position: relative;
+            
+        }
+
+        .footer-button {
+            position: absolute;
+            background-color: #252424;
+            color: white;
+            border: none;
+            right: 0;
+        }
+    }
 }
