--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -1,3 +1,10 @@
+.blog-background {
+    background-image: url(../assets/blog-1.jpeg);
+    height: 50vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
 
 .blog-shift {
     display: flex;
@@ -35,7 +42,7 @@
         margin-left: 20px;
         text-align: left;
 
-         h3 {
+        h3 {
             text-align: left;
         }
     }
@@ -89,6 +96,10 @@
     }
 }
 
+.blog-comments h2 {
+    border-bottom: 1px solid #CCCCCC;
+}
+
 .blog-comments img {
     max-width: 70px;
     max-height: 70px;
@@ -106,7 +117,6 @@
 .bubble {
     position: relative;
     width: 100%;
-    height: 150px;
     padding: 0px;
     background: #EDEDED;
     -webkit-border-radius: 10px;
@@ -130,4 +140,48 @@
 .comment {
     margin-left: 25px;
     padding-left: 25px;
+}
+
+.comment-form button {
+    margin-top: 50px;
+    width: 20%;
+    padding: 15px 15px;
+}
+
+.container-comment {
+    display: flex;
+    flex-direction: column;
+
+    ul {
+        display: flex;
+    }
+    
+    li {
+        width: 100%;
+
+    }
+}
+
+.form2 {
+    border-left: none;
+    border-top: none;
+    border-right: none;
+    width: 90%;
+}
+
+.third-box {
+    width: 100%;
+}
+
+.msg-area {
+    border-left: none;
+    border-top: none;
+    border-right: none;
+    margin-top: 50px;
+    height: 200px;
+}
+
+button {
+    background-color: #84A016;
+    color: white;
 }
