--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -36,13 +36,14 @@ h2 {
 
 h3 {
     font-family: 'Poppins',Sans Serif;
-    font-size: 1.6 rem;
+    font-size: 1.6rem;
     font-weight: 600;
     text-align: center;
     letter-spacing: 0.8rem;
 }
 
-p {
+p,
+a {
     font-family: 'Poppins',Sans Serif;
     font-size: 1.4rem;
     line-height: 3rem;
