finished html and basic styling of contact page. Working on final styling of all pages

--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -23,5 +23,47 @@
 
     h3 {
         text-align: left;
+        letter-spacing: 0;
     }
+}
+
+.inner-contact {
+
+    h2:nth-child(2) {
+        margin-top: 0;
+        margin-bottom: 100px;
+    }
+
+    .country,
+    .city {
+        font-size: 2.5rem;
+    }
+
+    .city {
+        color: black;
+    }
+
+    .email {
+        color: black;
+        font-weight: 600;
+    }
+
+    div {
+        p {
+            margin-top: 50px;
+            margin-bottom: 0;
+        }
+
+        h2 {
+            margin-top: 0;
+        }
+    }
+    
+    .phone-number {
+        font-size: 3rem;
+        margin-top: 0;
+    }
+
+
+
 }
