--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -32,6 +32,7 @@ h2 {
     font-weight: 700;
     line-height: 6rem;
     letter-spacing: 0.12rem;
+    ;
 }
 
 h3 {
@@ -40,6 +41,7 @@ h3 {
     font-weight: 600;
     text-align: center;
     letter-spacing: 0.8rem;
+    color: #999999;
 }
 
 p,
@@ -48,6 +50,8 @@ a {
     font-size: 1.4rem;
     line-height: 3rem;
     letter-spacing: 0.03rem;
+    color: #999999;
+    font-weight: 400;
 }
 
 ul {
@@ -59,6 +63,7 @@ ul {
 a {
     text-decoration: none;
     color: $text-color-main;
+    font-weight: 600;
 }
 
 img {
