--- a/styles/sass/_reviewGallery.scss
+++ b/styles/sass/_reviewGallery.scss
@@ -7,6 +7,14 @@
 .testimonial {
     display: flex;
     justify-content: center;
+
+    span {
+        color: black;
+    }
+
+    .name {
+        font-weight: 600;
+    }
 }
 
 .test-inner-wrapper {
@@ -24,9 +32,23 @@
     }
 }
 
+blockquote p {
+    font-family: 'Playfair Display', Sans Serif;
+    font-size: 2.4rem;
+    font-weight: 400;
+    line-height: 3.6rem;
+    font-style: italic;
+    text-align: center;
+    color: black;
+}
+
 .stars ul {
     display: flex;
     justify-content: center;
+
+    li {
+        color: #F6AB09;
+    }
 }
 
 
@@ -35,6 +57,10 @@
     flex-direction: column;
     text-align: center;
     margin: 100px auto;
+
+    h2 {
+        margin-top: 0;
+    }
     
     ul {
         display: flex;
@@ -52,11 +78,11 @@
         }
 
         li:nth-child(3) {
-                margin-right: 0;
+            margin-right: 0;
         }
 
         li:nth-child(6) {
-        margin-right: 0;
+            margin-right: 0;
         }
 
         li:nth-child(1),
