--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -52,13 +52,14 @@
         p {
             margin-top: 50px;
             margin-bottom: 0;
+            font-weight: 600;
         }
 
         h2 {
             margin-top: 0;
         }
     }
-    
+
     .phone-number {
         font-size: 3rem;
         margin-top: 0;
