--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -78,3 +78,11 @@ blockquote {
     text-align: center;
     line-height: 3.6rem;
 }
+
+form {
+    font-family: 'Poppins',Sans Serif;
+    font-size: 1.6rem;
+    font-weight: 600;
+    letter-spacing: 0.8rem;
+    color: #999999;
+}
