--- a/styles/sass/_contactPage.scss
+++ b/styles/sass/_contactPage.scss
@@ -22,11 +22,9 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        // padding-left: 75px;
 
         p {
             margin: 0;
-            // width: 90%;
         }
 
         h3 {
@@ -40,6 +38,25 @@
     }
         .contact-unique2 {
             border-right: none;
+        }
+
+        div {
+
+            i{
+                font-size: 4rem;
+
+            }
+
+            h3 {
+                margin-bottom: 10px;
+                margin-top: 20px;
+                letter-spacing: normal;
+                color: black;
+            }
+
+            p {
+                line-height: 2.5rem;
+            }
         }
 }
 
@@ -56,12 +73,17 @@
     margin-bottom: 100px;
     background-color: white;
     color: black;
-    border-left: none;
-    border-top: none;
-    border-right: none;
-
+    // border-left: none;
+    // border-top: none;
+    // border-right: none;
+    border: none;
     h3 {
         margin-bottom: 0;
+        letter-spacing: normal;
+        color: black;
+        border-bottom: 1px solid black;
+        width: 60%;
+        padding-bottom: 5px;
     }
 
 
