--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -10,7 +10,7 @@ footer {
         justify-content: center;
         
         a {
-            color: white;
+            color: #999999;
             
         }
     }
