--- a/styles/styles.css
+++ b/styles/styles.css
@@ -329,6 +329,14 @@ blockquote {
   line-height: 3.6rem;
 }
 
+form {
+  font-family: 'Poppins',Sans Serif;
+  font-size: 1.6rem;
+  font-weight: 600;
+  letter-spacing: 0.8rem;
+  color: #999999;
+}
+
 /*********************/
 /* Nav styles */
 /*********************/
@@ -722,6 +730,7 @@ blockquote p {
 .inner-contact div p {
   margin-top: 50px;
   margin-bottom: 0;
+  font-weight: 600;
 }
 
 .inner-contact div h2 {
@@ -756,7 +765,7 @@ footer .wrapper-inner {
 }
 
 footer .wrapper-inner a {
-  color: white;
+  color: #999999;
 }
 
 footer .footer-border {
@@ -859,6 +868,11 @@ footer form .footer-button {
   width: 95%;
 }
 
+.blog-title span {
+  font-weight: 600;
+  color: black;
+}
+
 .blog-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -879,7 +893,6 @@ footer form .footer-button {
 
 .blog-header .author img {
   border-radius: 50%;
-  width: 50%;
 }
 
 .blog-header .author-name {
@@ -889,6 +902,8 @@ footer form .footer-button {
 
 .blog-header .author-name h3 {
   text-align: left;
+  color: black;
+  letter-spacing: normal;
 }
 
 .blog-misc ul {
@@ -899,10 +914,17 @@ footer form .footer-button {
 
 .blog-misc ul h3 {
   text-align: left;
+  color: black;
+  letter-spacing: normal;
 }
 
 .blog-misc ul li {
   margin: 0 25px;
+}
+
+.blog-content .bold {
+  color: black;
+  font-weight: 600;
 }
 
 .blog-media {
@@ -912,6 +934,11 @@ footer form .footer-button {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+}
+
+.blog-media h3 {
+  color: black;
+  letter-spacing: normal;
 }
 
 .blog-media ul {
@@ -926,12 +953,41 @@ footer form .footer-button {
 
 .blog-media li {
   margin: 0 5px 0 5px;
+  color: #CCCCCC;
+}
+
+.blog-media li:nth-child(1) {
+  color: #A4F1DC;
 }
 
 .blog-related .related-gallery {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.blog-related .related-gallery div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  border-bottom: 1px solid #EDEDED;
+}
+
+.blog-related .related-gallery div h3 {
+  text-align: left;
+  color: black;
+  letter-spacing: normal;
+  text-decoration: underline;
+  -webkit-text-decoration-color: #CCCCCC;
+          text-decoration-color: #CCCCCC;
+  width: 90%;
 }
 
 .blog-related .related-gallery ul {
@@ -950,8 +1006,27 @@ footer form .footer-button {
   margin-right: 0;
 }
 
+.blog-comments {
+  margin-top: 100px;
+}
+
+.blog-comments .name {
+  color: black;
+}
+
+.blog-comments .reply {
+  color: #A4F1DC;
+  font-style: italic;
+}
+
+.blog-comments .comment-date {
+  font-size: 1rem;
+  margin-top: 0;
+}
+
 .blog-comments h2 {
   border-bottom: 1px solid #CCCCCC;
+  padding-bottom: 25px;
 }
 
 .blog-comments img {
@@ -996,6 +1071,10 @@ footer form .footer-button {
   padding-left: 25px;
 }
 
+.comment-form {
+  margin-top: 50px;
+}
+
 .comment-form button {
   margin-top: 50px;
   width: 20%;
@@ -1027,6 +1106,7 @@ footer form .footer-button {
   border-top: none;
   border-right: none;
   width: 90%;
+  padding-bottom: 10px;
 }
 
 .third-box {
@@ -1039,6 +1119,7 @@ footer form .footer-button {
   border-right: none;
   margin-top: 50px;
   height: 200px;
+  resize: none;
 }
 
 button {
@@ -1098,6 +1179,21 @@ button {
   border-right: none;
 }
 
+.contact-list div i {
+  font-size: 4rem;
+}
+
+.contact-list div h3 {
+  margin-bottom: 10px;
+  margin-top: 20px;
+  letter-spacing: normal;
+  color: black;
+}
+
+.contact-list div p {
+  line-height: 2.5rem;
+}
+
 .in-touch {
   margin-bottom: 100px;
 }
@@ -1110,13 +1206,16 @@ button {
   margin-bottom: 100px;
   background-color: white;
   color: black;
-  border-left: none;
-  border-top: none;
-  border-right: none;
+  border: none;
 }
 
 .contact-button h3 {
   margin-bottom: 0;
+  letter-spacing: normal;
+  color: black;
+  border-bottom: 1px solid black;
+  width: 60%;
+  padding-bottom: 5px;
 }
 
 .secondary-background {
