--- a/styles/sass/_reviewGallery.scss
+++ b/styles/sass/_reviewGallery.scss
@@ -57,6 +57,7 @@ blockquote p {
     flex-direction: column;
     text-align: center;
     margin: 100px auto;
+    margin-bottom: 150px;
 
     h2 {
         margin-top: 0;
