--- a/styles/styles.css
+++ b/styles/styles.css
@@ -397,6 +397,10 @@ form {
           align-items: center;
 }
 
+.mobile-bar {
+  display: none;
+}
+
 /*********************/
 /* Header styles */
 /*********************/
@@ -459,7 +463,6 @@ header {
 
 .about-circle {
   position: absolute;
-  /* left: -50px; */
   bottom: -40px;
   left: -100px;
 }
@@ -626,6 +629,7 @@ blockquote p {
           flex-direction: column;
   text-align: center;
   margin: 100px auto;
+  margin-bottom: 150px;
 }
 
 .gallery h2 {
@@ -1224,4 +1228,791 @@ button {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  /*--- Mobile portrait ---*/
+  .mobile-bar {
+    display: block;
+  }
+  .nav-bar ul {
+    display: none;
+  }
+  .about {
+    padding: 100px 0;
+  }
+  .about-info {
+    width: 70%;
+  }
+  .line {
+    display: none;
+  }
+  .about-us-content {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .about-image {
+    margin-right: 0;
+  }
+  .about-circle {
+    display: none;
+  }
+  .amenities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .experience {
+    margin: 50px 0;
+  }
+  .experience ul {
+    margin-left: 0;
+  }
+  .test-inner-wrapper {
+    padding: 50px 0;
+  }
+  .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact .inner-contact {
+    margin-right: 0;
+    margin-top: 80px;
+  }
+  footer {
+    height: 70vh;
+  }
+  footer form {
+    width: 100%;
+  }
+  .blog-header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .blog-related .related-gallery ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: normal;
+        -ms-flex-align: normal;
+            align-items: normal;
+  }
+  .blog-related .related-gallery li {
+    margin-right: 0;
+    width: auto;
+  }
+  .blog-related .related-gallery li div {
+    border: none;
+  }
+  .comment-form button {
+    width: 100%;
+  }
+  .container-comment ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .third-box {
+    width: 90%;
+  }
+  .form2 {
+    padding: 10px 0;
+    width: 100%;
+  }
+  .blog-shift {
+    top: -80px;
+  }
+  .blog-shift .blog-title {
+    padding-top: 0;
+  }
+  .contact-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contact-list li {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    border: none;
+  }
+  .contact-list li .contact-unique1 {
+    width: 100%;
+  }
+  .contact-list li div {
+    text-align: center;
+    width: 100%;
+  }
+  .contact-list li div h3 {
+    text-align: center;
+  }
+  .contact-list .contact-unique2 {
+    border-right: none;
+    width: calc(100% / 3);
+  }
+  .contact-email {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .in-touch {
+    text-align: center;
+  }
+  .contact-details {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 595px) {
+  /*--- Mobile landscape ---*/
+  .mobile-bar {
+    display: block;
+  }
+  .nav-bar ul {
+    display: none;
+  }
+  .about {
+    padding: 100px 0;
+  }
+  .about-info {
+    width: 70%;
+  }
+  .line {
+    display: none;
+  }
+  .about-us-content {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .about-image {
+    margin-right: 0;
+  }
+  .about-circle {
+    display: none;
+  }
+  .amenities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .experience {
+    margin: 50px 0;
+  }
+  .test-inner-wrapper {
+    padding: 50px 0;
+  }
+  .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact .inner-contact {
+    margin-right: 0;
+    margin-top: 80px;
+  }
+  .blog-header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .blog-related .related-gallery ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: normal;
+        -ms-flex-align: normal;
+            align-items: normal;
+  }
+  .blog-related .related-gallery li {
+    margin-right: 0;
+    width: auto;
+  }
+  .blog-related .related-gallery li div {
+    border: none;
+  }
+  .comment-form button {
+    width: 35%;
+  }
+  .container-comment ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .third-box {
+    width: 90%;
+  }
+  .form2 {
+    padding: 10px 0;
+    width: 100%;
+  }
+  .contact-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contact-list li {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    border: none;
+  }
+  .contact-list li .contact-unique1 {
+    width: 100%;
+  }
+  .contact-list li div {
+    text-align: center;
+    width: 100%;
+  }
+  .contact-list li div h3 {
+    text-align: center;
+  }
+  .contact-list .contact-unique2 {
+    border-right: none;
+    width: calc(100% / 3);
+  }
+  .contact-email {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .in-touch {
+    text-align: center;
+  }
+  .contact-details {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 595px) and (max-width: 690px) {
+  /*--- Small tablet portrait ---*/
+  .mobile-bar {
+    display: block;
+  }
+  .nav-bar ul {
+    display: none;
+  }
+  .about {
+    padding: 100px 0;
+  }
+  .about-info {
+    width: 70%;
+  }
+  .line {
+    display: none;
+  }
+  .about-us-content {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .about-image {
+    margin-right: 0;
+  }
+  .amenities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .experience {
+    margin: 50px 0;
+  }
+  .test-inner-wrapper {
+    padding: 50px 0;
+  }
+  .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact .inner-contact {
+    margin-right: 0;
+    margin-top: 80px;
+  }
+  .blog-header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .blog-related .related-gallery ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: normal;
+        -ms-flex-align: normal;
+            align-items: normal;
+  }
+  .blog-related .related-gallery li {
+    margin-right: 0;
+    width: auto;
+  }
+  .blog-related .related-gallery li div {
+    border: none;
+  }
+  .comment-form button {
+    width: 30%;
+  }
+  .container-comment ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .third-box {
+    width: 90%;
+  }
+  .form2 {
+    padding: 10px 0;
+    width: 100%;
+  }
+  .contact-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contact-list li {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    border: none;
+  }
+  .contact-list li .contact-unique1 {
+    width: 100%;
+  }
+  .contact-list li div {
+    text-align: center;
+    width: 100%;
+  }
+  .contact-list li div h3 {
+    text-align: center;
+  }
+  .contact-list .contact-unique2 {
+    border-right: none;
+    width: calc(100% / 3);
+  }
+  .contact-email {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .in-touch {
+    text-align: center;
+  }
+  .contact-details {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 690px) and (max-width: 800px) {
+  /*--- Tablet portrait ---*/
+  .amenities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .experience {
+    margin: 50px auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .experience ul {
+    margin-left: 0;
+  }
+  .experience-image {
+    margin: 0 auto;
+  }
+  .blog-header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .blog-related .related-gallery ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: normal;
+        -ms-flex-align: normal;
+            align-items: normal;
+  }
+  .blog-related .related-gallery li {
+    margin-right: 0;
+    width: auto;
+  }
+  .blog-related .related-gallery li div {
+    border: none;
+  }
+  .comment-form button {
+    width: 30%;
+  }
+  .container-comment ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .third-box {
+    width: 90%;
+  }
+  .form2 {
+    padding: 10px 0;
+    width: 100%;
+  }
+  .contact-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contact-list li {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    border: none;
+  }
+  .contact-list li .contact-unique1 {
+    width: 100%;
+  }
+  .contact-list li div {
+    text-align: center;
+    width: 100%;
+  }
+  .contact-list li div h3 {
+    text-align: center;
+  }
+  .contact-list .contact-unique2 {
+    border-right: none;
+    width: calc(100% / 3);
+  }
+  .contact-email {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .in-touch {
+    text-align: center;
+  }
+  .contact-details {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  /*--- Small tablet landscape ---*/
+  .amenities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .experience {
+    margin: 50px auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .experience ul {
+    margin-left: 0;
+  }
+  .experience-image {
+    margin: 0 auto;
+  }
+  footer {
+    height: 30vh;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1224px) {
+  /*--- Tablet landscape --- */
+  .amenities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .experience {
+    margin: 50px auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .experience ul {
+    margin-left: 0;
+  }
+  .experience-image {
+    margin: 0 auto;
+  }
+  footer {
+    height: 40vh;
+  }
+  .blog-shift {
+    top: -70px;
+  }
+}
+
+@media (max-width: 1225px) {
+  .about {
+    padding: 100px 0;
+  }
+  .about-info {
+    width: 70%;
+  }
+  .line {
+    display: none;
+  }
+  .about-us-content {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .about-image {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 812px) and (orientation: landscape) {
+  header {
+    height: 73vh;
+  }
+  footer {
+    height: 80vh;
+  }
+  .blog-shift .blog-title {
+    padding-top: 0;
+  }
+  .blog-shift {
+    top: 0;
+  }
+  .comment-form button {
+    margin-bottom: 50px;
+  }
+  .blog-background {
+    height: 73vh;
+  }
+  .contact-background-header {
+    height: 73vh;
+  }
+}
+
+@media (max-width: 1280px) and (orientation: landscape) {
+  footer {
+    height: 40vh;
+  }
+}
+
+@media (max-width: 740px) and (orientation: landscape) {
+  header {
+    height: 72vh;
+  }
+  footer {
+    height: 80vh;
+  }
+  .blog-shift {
+    top: 0px;
+  }
+  .blog-background {
+    height: 72vh;
+  }
+  .comment-form button {
+    margin-bottom: 50px;
+  }
+  .contact-list .contact-unique2 {
+    border-right: none;
+    width: calc(100% / 3);
+  }
+}
+
+@media (max-width: 736px) and (orientation: landscape) {
+  header {
+    height: 76vh;
+  }
+  footer {
+    height: 80vh;
+  }
+  .blog-background {
+    height: 76vh;
+  }
+  .contact-background-header {
+    height: 76vh;
+  }
+}
+
+@media (max-width: 667px) and (orientation: landscape) {
+  header {
+    height: 73vh;
+  }
+  footer {
+    height: 80vh;
+  }
+  .blog-background {
+    height: 73vh;
+  }
+  .blog-shift .blog-title {
+    padding-top: 0;
+  }
 }
