--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -136,6 +136,11 @@
     }
 }
 
+.blog-related .related-gallery li:hover {
+    box-shadow: 10px 27px 23px -15px rgba(153,153,153,0.9);
+
+}
+
 
 .blog-comments {
     margin-top: 100px;
@@ -231,6 +236,12 @@
     border-right: none;
     width: 90%;
     padding-bottom: 10px;
+    color: #999999;
+
+    &:focus {
+        color: black;
+        border-color: black;
+    }
 }
 
 .third-box {
@@ -244,6 +255,12 @@
     margin-top: 50px;
     height: 200px;
     resize: none;
+    color: #999999;
+
+    &:focus {
+        color: black;
+        border-color: black;
+    }
 }
 
 button {
