--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -11,6 +11,10 @@ footer {
         
         a {
             color: #999999;
+
+            &:hover {
+                color: white;
+            }
             
         }
     }
