media query corrections

--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -2,7 +2,7 @@ footer {
     display: flex;
     background-color: #252424;
     color: white;
-    height: 25vh;
+    padding-top: 50px;
     
     .wrapper-inner {
         display: flex;
