--- a/styles/styles.css
+++ b/styles/styles.css
@@ -756,7 +756,7 @@ footer {
   display: flex;
   background-color: #252424;
   color: white;
-  height: 25vh;
+  padding-top: 50px;
 }
 
 footer .wrapper-inner {
@@ -1318,9 +1318,6 @@ button {
     margin-right: 0;
     margin-top: 80px;
   }
-  footer {
-    height: 70vh;
-  }
   footer form {
     width: 100%;
   }
@@ -1750,7 +1747,7 @@ button {
   }
 }
 
-@media only screen and (min-width: 690px) and (max-width: 800px) {
+@media only screen and (min-width: 691px) and (max-width: 800px) {
   /*--- Tablet portrait ---*/
   .amenities {
     display: -webkit-box;
@@ -1810,6 +1807,15 @@ button {
   .form2 {
     padding: 10px 0;
     width: 100%;
+  }
+  .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact-info {
+    padding-top: 95px;
   }
   .contact-list {
     -webkit-box-orient: vertical;
@@ -1874,6 +1880,24 @@ button {
   }
 }
 
+@media only screen and (min-width: 801px) and (max-width: 1424px) {
+  .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact img {
+    margin: 0 auto;
+  }
+  .contact .inner-contact {
+    margin-right: 0;
+  }
+  .contact-info {
+    padding-top: 95px;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   /*--- Small tablet landscape ---*/
   .amenities {
@@ -1896,9 +1920,6 @@ button {
   }
   .experience-image {
     margin: 0 auto;
-  }
-  footer {
-    height: 30vh;
   }
 }
 
@@ -1924,9 +1945,6 @@ button {
   }
   .experience-image {
     margin: 0 auto;
-  }
-  footer {
-    height: 40vh;
   }
   .blog-shift {
     top: -70px;
@@ -1964,9 +1982,6 @@ button {
   header {
     height: 73vh;
   }
-  footer {
-    height: 80vh;
-  }
   .blog-shift .blog-title {
     padding-top: 0;
   }
@@ -1984,18 +1999,9 @@ button {
   }
 }
 
-@media (max-width: 1280px) and (orientation: landscape) {
-  footer {
-    height: 40vh;
-  }
-}
-
 @media (max-width: 740px) and (orientation: landscape) {
   header {
     height: 72vh;
-  }
-  footer {
-    height: 80vh;
   }
   .blog-shift {
     top: 0px;
@@ -2016,9 +2022,6 @@ button {
   header {
     height: 76vh;
   }
-  footer {
-    height: 80vh;
-  }
   .blog-background {
     height: 76vh;
   }
@@ -2030,9 +2033,6 @@ button {
 @media (max-width: 667px) and (orientation: landscape) {
   header {
     height: 73vh;
-  }
-  footer {
-    height: 80vh;
   }
   .blog-background {
     height: 73vh;
